Ajuste de estilo del home y cambio del set de imagenes del carrusel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href='css/style.css' rel='stylesheet' type='text/css'>
 <style>
 body {
-	background-image: url("images/fondo PRINCIPAL.png");
+	background-image: url("images/fondo FAQ.png");
 }
 @media (max-width: 480px) {
 	#title{ font-size: 1.3em !important;}
@@ -44,15 +44,17 @@ body {
 			<div id="store" class="col-md-3" align="center">
 				<a href="https://geo.itunes.apple.com/us/app/pictune-app/id983298331?mt=8" target="itunes_store"></a>
 			</div>
-			<a href="https://geo.itunes.apple.com/us/app/pictune-app/id983298331?mt=8" target="itunes_store">
-			<div id="iphone" class="col-md-3" align="center">
-				<img class="img-responsive" src="images/iphone000.jpg">
-				<img class="img-responsive" src="images/iphone001.jpg">
-				<img class="img-responsive" src="images/iphone002.jpg">
-				<img class="img-responsive" src="images/iphone003.jpg">
-				<img class="img-responsive" src="images/iphone004.jpg">
+			<div id="iphone" class="col-md-7" align="center">
+				<img class="img-responsive" src="images/1.jpg">
+				<img class="img-responsive" src="images/2.jpg">
+				<img class="img-responsive" src="images/3.jpg">
+				<img class="img-responsive" src="images/4.jpg">
+				<img class="img-responsive" src="images/5.jpg">
+				<p id="description" align="center">
+					Take a picture, change its aspect, listen how it sounds and share it on Pictune.<br>
+					It’s a new way of seeing and listening to the world.
+				</p>
         	</div>
-        	</a>
         	<div class="col-md-3 visible-xs-block" align="center">
 				<section>
 					<ul id="social">
@@ -65,10 +67,6 @@ body {
 				</section>
 			</div>
     	</div>
-		<p id="description" align="center">
-			Take a picture, change its aspect, listen how it sounds and share it on Pictune.<br>
-			It’s a new way of seeing and listening to the world.
-		</p>
 		<div class="row">
 		<div>
 			<div id="menu" align="center">
