Actualización de la descripción de la página.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="pictune is an app ">
+    <meta name="description" content="Now it's easy for everyone to compose music with Pictune, and app to compose music from images. Get it free for iOS.">
     <meta name="author" content="">
 
     <title>Pictune</title>
