--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Share your music </h2>
-                    <p class="lead">Show your music to the world by sharing it on Instagram, Facebook, Twitter an other social networks.</p>
+                    <p class="lead">Show your music to the world by sharing it on Instagram, Facebook, Twitter and other social networks.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-5  col-sm-6">
                     <img class="img-responsive big-action" src="img/step-01.png" alt="">
