--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </li>
                     </ul>
                 </div>
-                    <a class="email-footer" href="mailto:contact@pictune.me">&nbsp contact@pictune.me</a>
+                    <a class="email-footer" href="mailto:contact@pictune.me">contact@pictune.me</a>
 
             </div>
 
