--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <div class="text-header">
                                     <p>Get it now and discover</p>
                                     <p>the composer  inside you!</p>
-                                    <img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
+                                    <a href="https://itunes.apple.com/us/app/pictune-app/id983298331?mt=8"><img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a>
                                 </div>
                             </div>
                             <div class="col-lg-5 col-sm-pull-4 col-sm-6">
