--- a/faq.html
+++ b/faq.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Pictune</title>
-<meta name="description" content="An easy and fun way to share music created by you from images.">
+<meta name="description" content="An easy and fun way to share music created by you from img.">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="shortcut icon" href="images/pictune.ico">
+<link rel="shortcut icon" href="img/pictune.ico">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link href='css/style.css' rel='stylesheet' type='text/css'>
 <style>
 body {
-	background-image: url("images/fondo FAQ.png");
+	background-image: url("img/fondo FAQ.png");
 }
 @media (max-width: 480px) {
 	#title{ font-size: 1.3em !important;}
@@ -22,18 +22,18 @@ body {
 		<div class="row">
 			<div class="col-md-3" align="center">
 				<div id="logo">
-					<a href="index.html"><img class="img-responsive" src="images/Pictune logo.png"></a>
+					<a href="index.html"><img class="img-responsive" src="img/Pictune logo.png"></a>
 				</div>
 			</div>
 			<div  class="col-md-7"></div>
 			<div class="col-md-2" align="center">
 				<section>
 					<ul id="social">
-						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="images/icons/Bfacebook.png"></a></li>
-						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="images/icons/Byoutube.png"></a></li>
-						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="images/icons/Btwitter.png"></a></li>
-						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="images/icons/Binstagram.png"></a></li>
-						<li><a href="mailto:contact@pictune.me" target="_blank"><img src="images/icons/Bemail.png"></a></li>
+						<li><a href="https://www.facebook.com/PictuneApp" target="_blank"><img src="img/icons/Bfacebook.png"></a></li>
+						<li><a href="https://www.youtube.com/user/PictuneMe/" target="_blank"><img src="img/icons/Byoutube.png"></a></li>
+						<li><a href="https://twitter.com/pictuneApp" target="_blank"><img src="img/icons/Btwitter.png"></a></li>
+						<li><a href="https://instagram.com/pictuneApp" target="_blank"><img src="img/icons/Binstagram.png"></a></li>
+						<li><a href="mailto:contact@pictune.me" target="_blank"><img src="img/icons/Bemail.png"></a></li>
 					</ul>
 				</section>
 			</div>
@@ -42,18 +42,18 @@ body {
 			<div class="col-md-3" align="center">
 				<div id="v-menu">
 					<ul id="tab-menu" class="nav nav-stacked">
-						<li><span id="title"><img width="30px" src="images/HOME.png">Support</span></li>
+						<li><span id="title"><img width="30px" src="img/HOME.png">Support</span></li>
 						<li>
 							<a id="faq_link" data-toggle="tab" href="#faq">FAQ
-							<img src="images/selection.png">
+							<img src="img/selection.png">
 						</a></li>
 						<!--<li>
 							<a id="dictionary_link" data-toggle="tab" href="#dictionary">Conceptos b&aacute;sicos
-							<img style="display:none;" src="images/selection.png">
+							<img style="display:none;" src="img/selection.png">
 						</a></li>
 						<li>
 							<a id="news_link" data-toggle="tab" href="#news">Novedades
-							<img style="display:none;" src="images/selection.png">
+							<img style="display:none;" src="img/selection.png">
 						</a></li>-->
 					</ul>
 				</div>
@@ -64,7 +64,7 @@ body {
 					We are asked many questions about Pictune all the time. Here's a list of the most frequent ones. If you have any question or require any help, you can <a href="mailto:contact@pictune.me" target="_blank">contact us</a>.
 					<br><br>
 					<h5>What is Pictune?</h5>
-					<p>﻿Pictune is a new language to communicate through images and music. Pictune turns your photos through a creative process into music clips, that you can share with your friends. You can choose the style of the music as well as the emotion you want to express.
+					<p>﻿Pictune is a new language to communicate through img and music. Pictune turns your photos through a creative process into music clips, that you can share with your friends. You can choose the style of the music as well as the emotion you want to express.
 
 					<p>You can think of Pictune as a tool who anyone – not just those with music skills – can use to create music. In Pictune, you make the same sort of decisions a composer makes when he or she is creating music, such as setting the composition style, instruments and mood, but you do so through a very intuitive process that doesn't require extensive musical knowledge.
 					<br><br>
@@ -93,10 +93,10 @@ body {
 		<div>
 			<div id="menu" align="center">
 				<nav>
-					<a href="faq.html"><img src="images/blue.png">SUPPORT</a> |
-					<a href="salamendoza/Grid.html" target="_blank"><img src="images/yellow.png">SALA MENDOZA PRESENTATION</a>
+					<a href="faq.html"><img src="img/blue.png">SUPPORT</a> |
+					<a href="salamendoza/Grid.html" target="_blank"><img src="img/yellow.png">SALA MENDOZA PRESENTATION</a>
 					<!--|
-					<a href="salamendoza/Grid.html" target="_blank"><img src="images/pink.png">CONT&Aacute;TANOS </a>-->
+					<a href="salamendoza/Grid.html" target="_blank"><img src="img/pink.png">CONT&Aacute;TANOS </a>-->
 				</nav>
 			</div>
 		</div>
