--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Pictune</title>
-<meta name="description" content="An easy and fun way to share music created by you from img.">
+<meta name="description" content="An easy and fun way to share music created by you from images.">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="shortcut icon" href="img/pictune.ico">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -130,4 +130,12 @@ body {
 		ga('send', 'pageview');
 	</script>
 </body>
+    <script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-64314784-1', 'auto');
+	ga('send', 'pageview');
+    </script>
 </html> 
