--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="http://pictune.me/"><img alt="Set your life's moments to music" src="img/(100)Pictune_imagotipo_horizontal2.png"></a>
+                <a class="navbar-brand topnav" href="http://pictune.me/"><img src="img/(100)Pictune_imagotipo_horizontal2.png"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,7 +75,7 @@
                     <div class="intro-message">
                          <div class="row">
                              <div class="col-lg-5 col-lg-offset-1 col-sm-push-5  col-sm-6">
-                                 <img class="title" src="img/title.png">
+                                 <img class="title" src="img/title.png" alt="Set your life's moments to music">
                                 <div class="clearfix"></div>
                                 <div class="text-header">
                                     <p>Get it now and discover</p>
