actualización header y footer.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                          <div class="row">
-                             <div class="col-lg-5 col-lg-offset-1 col-sm-push-5  col-sm-6">
-                                 <img class="title" src="img/title.png" alt="Set your life's moments to music">
+                            <div class="col-lg-5 col-sm-pull-0  col-sm-6">
+                                <img class="title" src="img/title.png" alt="Set your life's moments to music">
                                 <div class="clearfix"></div>
                                 <div class="text-header">
                                     <p>Get it now and discover</p>
@@ -83,7 +83,7 @@
                                     <a href="https://itunes.apple.com/us/app/pictune-app/id983298331?mt=8"><img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a>
                                 </div>
                             </div>
-                            <div class="col-lg-5 col-sm-pull-4 col-sm-6">
+                            <div class="col-lg-5 col-sm-push-1 col-sm-6">
                                 <img class="img-responsive img-header" src="img/phone-header.png" alt="">
                             </div>
                             </div>
@@ -212,20 +212,16 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12 network">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://www.facebook.com/Pictuneapp/"><img class="facebook img-responsive" src="img/redes-02.png" alt=""></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/pictuneapp"><img class="twitter img-responsive" src="img/redes-01.png" alt=""></a>
-                        </li>
-                    </ul>
+                <div class="col-lg-6 network-facebook">
+                    <a href="https://www.facebook.com/Pictuneapp/"><img class="facebook img-responsive" src="img/redes-02.png" alt=""></a>
+                          </div>
+                            <div class="col-lg-6 network-twitter">
+                    <a href="https://twitter.com/pictuneapp"><img class="twitter img-responsive" src="img/redes-01.png" alt=""></a>
                 </div>
-                    <a class="email-footer" href="mailto:contact@pictune.me">contact@pictune.me</a>
-
             </div>
-
+            <div class="email-footer">
+                <a href="mailto:contact@pictune.me">contact@pictune.me</a>
+            </div>
         </div>
         <!-- /.container -->
 
