--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </button> -->
                 <a class="navbar-brand topnav" href="http://pictune.me/"><img src="img/(100)Pictune_imagotipo_horizontal2.png"></a>
+                <a href="https://itunes.apple.com/us/app/pictune-app/id983298331?mt=8">
+                    <img class="rightnav" src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -107,7 +110,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <div class="clearfix"></div>
-                    <h3 class="section-heading">Compose music from images <br><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp and share it with your friends</h3>
+                    <h3 class="section-heading">Compose music from images <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and share it with your friends</h3>
                     <table>
                         <tr>
                             <td>
@@ -204,6 +207,8 @@
 
         </div>
         <!-- /.container -->
+    </div>
+
     <!-- /.content-section-a -->
 
 	<a  name="contact"></a>
@@ -262,6 +267,13 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-64314784-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
-
 </html>
