Actualización badge e iconos de redes.

--- a/index.html
+++ b/index.html
@@ -36,17 +36,23 @@
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header row">
                 <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> -->
+                <div class="col-lg-6 col-sm-6">
                 <a class="navbar-brand topnav" href="http://pictune.me/"><img src="img/(100)Pictune_imagotipo_horizontal2.png"></a>
+                </div>
+
+                                <div class="applebadge col-lg-6 col-sm-6">
                 <a href="https://itunes.apple.com/us/app/pictune-app/id983298331?mt=8">
-                    <img class="rightnav" src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
+                    <img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
                 </a>
+                </div>
+                
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -217,11 +223,11 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6 network-facebook">
-                    <a href="https://www.facebook.com/Pictuneapp/"><img class="facebook img-responsive" src="img/redes-02.png" alt=""></a>
-                          </div>
-                            <div class="col-lg-6 network-twitter">
-                    <a href="https://twitter.com/pictuneapp"><img class="twitter img-responsive" src="img/redes-01.png" alt=""></a>
+                <div class="fb col-lg-6 col-xs-6">
+                    <a href="https://www.facebook.com/Pictuneapp/"><img src="img/redes-02.png" alt=""></a>
+                </div>
+                <div class="tw col-lg-6 col-xs-6">
+                    <a href="https://twitter.com/pictuneapp"><img src="img/redes-01.png" alt=""></a>
                 </div>
             </div>
             <div class="email-footer">
