--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
 
             <div class="row">
                 <div class="fb col-lg-6 col-xs-6">
-                    <a href="https://www.facebook.com/Pictuneapp/"><img src="img/redes-02.png" alt=""></a>
+                    <a href="https://www.instagram.com/PictuneApp"><img src="img/redes-02.png" alt=""></a>
                 </div>
                 <div class="tw col-lg-6 col-xs-6">
-                    <a href="https://twitter.com/pictuneapp"><img src="img/redes-01.png" alt=""></a>
+                    <a href="https://twitter.com/PictuneApp"><img src="img/redes-01.png" alt=""></a>
                 </div>
             </div>
             <div class="email-footer">
