--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                                 <div class="applebadge col-lg-6 col-sm-6">
-                <a href="https://itunes.apple.com/us/app/pictune-app/id983298331?mt=8">
+                <a href=https://apps.apple.com/us/app/pictune-music/id983298331">
                     <img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
                 </a>
                 </div>
@@ -89,7 +89,7 @@
                                 <div class="text-header">
                                     <p>Get it now and discover</p>
                                     <p>the composer  inside you!</p>
-                                    <a href="https://itunes.apple.com/us/app/pictune-app/id983298331?mt=8"><img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a>
+                                    <a href="https://apps.apple.com/us/app/pictune-music/id983298331"><img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a>
                                 </div>
                             </div>
                             <div class="col-lg-5 col-sm-push-1 col-sm-6">
@@ -224,10 +224,10 @@
 
             <div class="row">
                 <div class="fb col-lg-6 col-xs-6">
-                    <a href="https://www.instagram.com/PictuneApp"><img src="img/redes-02.png" alt=""></a>
+                    <a href="https://www.instagram.com/pictunemusic"><img src="img/redes-02.png" alt=""></a>
                 </div>
                 <div class="tw col-lg-6 col-xs-6">
-                    <a href="https://twitter.com/PictuneApp"><img src="img/redes-01.png" alt=""></a>
+                    <a href="https://twitter.com/PictuneMusic"><img src="img/redes-01.png" alt=""></a>
                 </div>
             </div>
             <div class="email-footer">
