--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                                 <div class="applebadge col-lg-6 col-sm-6">
-                <a href=https://apps.apple.com/us/app/pictune-music/id983298331">
+                <a href="https://apps.apple.com/us/app/pictune-music/id983298331">
                     <img src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
                 </a>
                 </div>
